[package]
name = "rustdds"
version = "0.4.11"
authors = ["Juhana Helovuo <juhana.helovuo@atostek.com>", "Oiva Moisio <oiva.moisio@atostek.com>", "Miska Melkinen <miska.melkinen@atostek.com>", "Lauri Eneh <lauri.eneh@atostek.com>"]
description = "Native Rust DDS implementation with RTPS"
readme = "README.md"
keywords = ["network","protocol","dds","rtps"]
license = "Apache-2.0"
edition = "2018"
homepage = "https://atostek.com/en/products/rustdds/"  
repository = "https://github.com/jhelovuo/RustDDS"
categories = ["network-programming", "science::robotics"] 
# the science-robotics category is because of ROS2

[dependencies]
mio = "^0.6.23"
mio-extras = "2.0.6"
tokio-util = { version = "0.3.1", features = ["codec"] }
bit-vec = "0.6.2"
speedy = "0.6.0"
log = "0.4.11"
num-traits = "0.2"
num-derive = "0.3"
serde = { version = "1.0", features = ["derive"] }
byteorder = { version = "1.3", features = ["i128"] }
uuid = { version = "0.8.1", features = ["v4"] }
rand = "0.7.3"
timer = "0.1"
chrono = "0.4"
enumflags2 = { version = "0.7.1", features = ["serde"] }
if-addrs = "0.6.6"
paste = "1"
md5 = "0.7.0"
socket2 = { version = "0.4", features = ["all"] }
bytes = "1"
static_assertions = "1.1"
thiserror = "1.0.29"

[dev-dependencies]
serde_repr = {version = "0.1" }
# shapes-demo:
ctrlc = "3.1.6"     
termion = "1.5.5"
env_logger = "0.7.1"
# ros2-demo
log4rs = "1"
test-case = "1.2.0"
