[package]
name = "ros2_demo"
version = "0.1.0"
authors = ["Oiva Moisio <oiva.moisio@atostek.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atosdds = { path = "../../"}
serde = "1.0.115"
mio = "0.6.22"
mio-extras = "2.0.6"
termion = "1.5.5"
byteorder = "1.3.4"
log = "0.4.11"
env_logger = "0.7.1"