[package]
name = "shapes_demo"
version = "0.1.0"
authors = ["Oiva Moisio <oiva.moisio@atostek.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atosdds = { path = "../../"}
ctrlc = "3.1.6"
serde = "1.0.115"
mio = "0.6.22"
mio-extras = "2.0.6"
byteorder = "1.3.4"
termion = "1.5.5"
env_logger = "0.7.1"